--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Designer Challenge</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Roboto&display=swap" rel="stylesheet">
 </head>
@@ -21,6 +21,7 @@
         <img src="assets/img/rocket.png" alt="">
         <p>SCROLL TO SEE MORE&mdash;</p>
     </div>
+
     <!-- seite 2 -->
     <section></section>
     <!-- seite 3 -->
@@ -40,12 +41,13 @@
         </article>
         <h4>After several weeks of <br> sticking to this challenge, I <br> learned a lot</h4>
     </section>
-    <section>
+    <!-- seite 4 -->
+    <section class="group">
 
         <article class="group1">
             <img src="assets/img/title02.svg" alt="" width="50px">
             <h5>Start with asking why</h5>
-            <p>why You will start seeing things differently and coming <br> up with more effective ways of achieving
+            <p>why You will start seeing things differently and coming up with more effective ways of achieving
                 goals.
             </p>
         </article>
@@ -53,31 +55,28 @@
         <article class="group1">
             <img src="assets/img/title04.svg" alt="" width="50px">
             <h5>Your ideas will have more value</h5>
-            <p>By looking at problems from a different <br> perspective, your ideas will be fresher and more <br>
-                valuable.
-            </p>
+            <p>By looking at problems from a different perspective, your ideas will be fresher and more valuable.</p>
         </article>
 
 
         <article class="group2">
             <img src="assets/img/title01.svg" alt="" width="50px">
             <h5>Design solutions with love</h5>
-            <p>Only when you experience a problem yourself do <br> you understand the frustration of the users and
-                <br>
-                resolve to end it.</p>
+            <p>Only when you experience a problem yourself do you understand the frustration of the users and
+             resolve to end it.</p>
         </article>
 
         <article class="group2">
             <img src="assets/img/title03.svg" alt="" width="50px">
             <h5>Share and show your work</h5>
-            <p>As designers, we are often afraid of showing work <br> that’s not finished or doesn’t look perfect.
+            <p>As designers, we are often afraid of showing work that’s not finished or doesn’t look perfect.
                 You
-                will <br>
+                will 
                 learn to accept feedback and learn from it.
             </p>
         </article>
     </section>
-    <!-- seite 4 -->
+    <!-- seite 5 -->
     <section>
         <h1>Are you ready? Let's go!!</h1>
         <p>The challenge lasts 30 days. On each of those days you will have to create a <br> solution to any problem
@@ -92,7 +91,7 @@
             to your <br> surroundings.
         </p>
     </section>
-    <!-- seite 5 -->
+    <!-- seite 6 -->
     <section>
         <p>02</p>
         <img class="left" src="assets/img/step02.svg" alt="">
@@ -101,7 +100,7 @@
             box, grab your notebook and start writing down all <br> the ideas that come to mind.
         </p>
     </section>
-    <!-- seite 6 -->
+    <!-- seite 7 -->
     <section>
         <p>03</p>
         <img src="assets/img/step03.svg" alt="">
@@ -110,7 +109,7 @@
             start designing. Don’t forget to always ask <br> yourself: Would I actually use this?
         </p>
     </section>
-    <!-- seite 7 -->
+    <!-- seite 8 -->
     <section>
         <p>04</p>
         <h2>Share your work</h2>
